moved the checkout to a modal and added the myorders and order page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,13 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle menuId="m1">
+          <ion-item lines="none" routerLink="/myorders">
+            <ion-icon name="reader-outline" slot="start"></ion-icon>
+            <ion-label>My Orders</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+
+        <ion-menu-toggle menuId="m1">
           <ion-item lines="none">
             <ion-icon name="person-outline" slot="start"></ion-icon>
             <ion-label>Account</ion-label>
@@ -24,7 +31,7 @@
 
         <ion-menu-toggle menuId="m1">
           <ion-item lines="none">
-            <ion-icon name="reader-outline" slot="start"></ion-icon>
+            <ion-icon name="megaphone-outline" slot="start"></ion-icon>
             <ion-label>About</ion-label>
           </ion-item>
         </ion-menu-toggle>
