--- a/src/app/core/cart/done/done.page.html
+++ b/src/app/core/cart/done/done.page.html
@@ -20,8 +20,7 @@
   <div class="eta">ETA: 44 - 47 min</div>
 
   <div class="actions">
-    <ion-button [disabled]="true" class="btn">Track Delivery</ion-button>
-    <ion-button [disabled]="true" class="btn">View Order</ion-button>
+    <ion-button routerLink="/myorders" class="btn">My Orders</ion-button>
   </div>
 
   <div class="note">Please inform the delivery guy if anything is unclear.</div>
