--- a/src/app/core/cart/cart.page.html
+++ b/src/app/core/cart/cart.page.html
@@ -53,7 +53,11 @@
         <div class="">Total</div>
         <div>${{ total }}</div>
       </div>
-      <ion-button routerLink="/home/checkout" class="btn">
+      <ion-button
+        (click)="onCheckout()"
+        [disabled]="cart.length <= 0"
+        class="btn"
+      >
         CHECK OUT
       </ion-button>
     </div>
