--- a/src/app/shared/map-modal/map-modal.component.html
+++ b/src/app/shared/map-modal/map-modal.component.html
@@ -1,9 +1,11 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/home/cart"></ion-back-button>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onCancel()">
+        <ion-icon name="close" color="primary" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
-    <ion-title color="primary"> Pick your location </ion-title>
+    <ion-title color="primary">{{ modalTitle }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,10 +14,10 @@
     <ion-spinner color="primary"></ion-spinner>
   </div>
 
-  <p *ngIf="!isLoading" class="top">
+  <p *ngIf="!isLoading && isCheckout" class="top">
     By adding location you are accepting the <br />
     <span class="link"> terms and conditions </span>
   </p>
 
-  <div id="map" #map></div>
+  <div class="map" #map></div>
 </ion-content>
