--- a/src/app/shared/map-modal/map-modal.component.scss
+++ b/src/app/shared/map-modal/map-modal.component.scss
@@ -12,12 +12,10 @@ ion-header {
     }
   }
 }
-
 ion-content {
   --background: #eee;
 
   position: relative;
-
   p {
     position: absolute;
     left: 0;
@@ -38,46 +36,27 @@ ion-content {
     }
   }
 
-  #map {
+  .map {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
+    height: 100%;
+    width: 100%;
 
     background-color: transparent;
     display: none;
     opacity: 0;
     transition: opacity 150ms ease-in;
+  }
 
-    &.visible {
-      display: block;
-      opacity: 1;
-    }
+  .map.visible {
+    display: block;
+    opacity: 1;
   }
 
   .loadingBg {
-    position: absolute;
-    top: -100px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-}
-
-@media (max-width: 340px) {
-  ion-content {
-    p.top {
-      margin: 14px 8px 0;
-
-      br {
-        display: none;
-      }
-    }
+    height: 100%;
+    width: 100%;
   }
 }
