fixed the ngIf problem

--- a/src/app/myorders/order/order.page.html
+++ b/src/app/myorders/order/order.page.html
@@ -16,7 +16,7 @@
         <div class="status">ongoing</div>
       </div>
       <div class="line">
-        <div>Order ID: {{ orderID + 1 }}</div>
+        <div>Order ID: {{ 779382 + orderID }}</div>
         <div>Total: <b>${{ total }}</b></div>
       </div>
     </div>
