--- a/src/app/myorders/myorders.page.html
+++ b/src/app/myorders/myorders.page.html
@@ -16,35 +16,18 @@
     Ouch!! You haven't made any orders yet.
   </div>
 
-  <div class="item" *ngFor="let o of myorders; let i = index;" [routerLink]="i">
+  <div
+    class="item"
+    *ngFor="let o of myorders.reverse(); let i = index;"
+    [routerLink]="myorders.length - 1 - i"
+  >
     <div class="main">
-      <div class="id">Order #{{i + 1 }}</div>
+      <div class="id">Order #{{ 779382 + myorders.length - 1 - i }}</div>
       <div class="date">On May 7, 2021 5:48 AM</div>
       <div class="amt">Amount: ${{ calcAmt( o.cart) }}</div>
     </div>
     <div class="status">
       <ion-icon color="primary" name="{{ getStat(o) }}"></ion-icon>
-    </div>
-  </div>
-  <hr />
-  <div class="item">
-    <div class="main">
-      <div class="id">Order #779382</div>
-      <div class="date">On May 7, 2021 5:48 AM</div>
-      <div class="amt">Amount: $245.00</div>
-    </div>
-    <div class="status">
-      <ion-icon color="primary" name="hourglass-outline"></ion-icon>
-    </div>
-  </div>
-  <div class="item">
-    <div class="main">
-      <div class="id">Order #779382</div>
-      <div class="date">On May 7, 2021 5:48 AM</div>
-      <div class="amt">Amount: $245.00</div>
-    </div>
-    <div class="status">
-      <ion-icon color="primary" name="checkmark-done"></ion-icon>
     </div>
   </div>
 </ion-content>
