--- a/src/app/myorders/order/order.page.scss
+++ b/src/app/myorders/order/order.page.scss
@@ -36,6 +36,11 @@ ion-content {
         display: flex;
         justify-content: space-between;
 
+        .date {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
         .status {
           color: #77c382;
           font-size: 16px;
@@ -128,6 +133,72 @@ ion-content {
         align-items: center;
         justify-content: center;
         font-size: 20px;
+      }
+    }
+  }
+}
+
+@media (max-width: 310px) {
+  ion-content {
+    .wrapper {
+      .meta {
+        height: 60px; // +1 for border, +10 for padding
+
+        .line {
+          font-size: 17px;
+
+          .status {
+            font-size: 14px;
+          }
+        }
+      }
+
+      .dest {
+        height: 35px;
+        .title {
+          font-size: 17px;
+        }
+        ion-icon {
+          width: 20px;
+          height: 20px;
+        }
+      }
+
+      .cart-item {
+        height: 90px; // +1 for border, +14 for padding
+        padding: 7px 20px 7px 10px;
+
+        .pic {
+          width: 75px;
+          height: 75px;
+          border-radius: 6px;
+        }
+
+        .info {
+          padding: 0 0 0 10px;
+          max-width: calc(100% - 75px - 25px);
+          width: calc(100% -75px - 25px);
+
+          // Limit to 25 chars
+          .n {
+            font-size: 18px;
+            margin: 0 0 1px;
+          }
+
+          .r {
+            font-size: 15px;
+          }
+
+          .p {
+            margin: 1px 0 0;
+            font-size: 18px;
+          }
+        }
+
+        .quantity {
+          width: 25px;
+          font-size: 18px;
+        }
       }
     }
   }
